--- a/src/Revealyan.CleanArchitecture.Domain/Revealyan.CleanArchitecture.Domain.csproj
+++ b/src/Revealyan.CleanArchitecture.Domain/Revealyan.CleanArchitecture.Domain.csproj
@@ -2,6 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Version>0.1.0</Version>
+    <Authors>Revealyan</Authors>
+    <Product>Revealyan.CleanArchitecture</Product>
+    <Description>Clean architecture .NET
+Domain layer</Description>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/revealyan/CleanArchitecture</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
 </Project>
